# django-admin-smart-filters

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  verify_build.ps1
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-declarative-filter-api-foundation/: 01-01-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-VERIFICATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
django_admin_smart_filters/: __init__.py  admin.py  autocomplete.py  builder.py  chips.py  contracts.py  declarations.py  params.py  query.py  registry.py  state.py  theme.py  validation.py
django_smart_filters/: __init__.py  admin.py  autocomplete.py  builder.py  chips.py  contracts.py  declarations.py  params.py  query.py  registry.py  state.py  theme.py  validation.py
docs/: architecture.md  examples.md  extension_hooks.md  project_description.md  theme_adapters.md
test_project/core/: asgi.py  settings.py  urls.py  wsgi.py
test_project/test_app/: admin.py  apps.py  models.py
tests/: test_active_filters_ui.py  test_admin_filters.py  test_autocomplete.py  test_autocomplete_admin_endpoint.py  test_autocomplete_ui.py  test_declarations.py  test_docs_examples.py  test_extension_registry.py  test_query.py  test_state.py  test_theme_adapters.py  test_validation.py
(+47 files in other folders)
