[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django_admin_smart_filters"
version = "1.1.0"
description = "A reusable filtering framework for Django Admin that improves filter usability for large datasets."
readme = "README.md"
authors = [
  { name="Django Smart Filters Contributors" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "Django>=5.2",
    "asgiref>=3.11"
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License"
]

[tool.hatch.build.targets.wheel]
packages = ["django_admin_smart_filters"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=tests.settings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"